# EDGE-2

./: CMakeLists.txt  EDGE-2.code-workspace  LICENSE  README.md
engines/: README.md
engines/include/document/: model.h
engines/include/gui/: gitem.h  gui.actions.h  guiModel.h
engines/include/gui/magnum/: MyApplication.h
engines/include/utils/: vec3d.h
engines/src/brep/: body.actions.cpp  body.cpp  body.test.cpp  brepModel.test.cpp
engines/src/document/: model.cpp  store.cpp  store.test.cpp
engines/src/gui/magnum/: MyApplication.cpp
engines/src/main/: modellingService_main.cpp
engines/src/utils/: graph.test.cpp  vec3d.test.cpp
include/brep/: body.actions.h  body.fixtures.h  body.h  brepModel.h
include/document/: document.h  documentService.h  model.h  store.h
include/gui/: gitem.h  gui.actions.h  guiModel.h
include/gui/helloMagnum/: ArcBallCamera.h
include/gui/magnum/: MagnumGate.h  MyApplication.h
include/utils/: geom3d.h  graph.h  vec3d.h
scripts/: e2_desktopApp.zsh  e2_modellingService.zsh
src/brep/: body.actions.cpp  body.fixtures.cpp  body.test.cpp  brepModel.cpp
src/document/: document.cpp  document.test.cpp  documentService.cpp  documentService.test.cpp  model.test.cpp  store.test.cpp
src/gui/: gitem.cpp  gui.actions.cpp  guiModel.cpp
src/gui/helloMagnum/: ArcBall.cpp
src/gui/magnum/: ArcBall.cpp  MagnumGate.cpp  MyApplication.cpp
src/main/: desktopApp_main.cpp  helloMagnum_main.cpp  modellingService_main.cpp
src/utils/: geom3d.test.cpp  graph.test.cpp  hello.test.cpp  vec3d.test.cpp
web/: README.md  package-lock.json
web/e2_viewer/: index.html  package-lock.json  package.json
web/e2_viewer/src/document/: document.test.ts  document.ts  model.ts  store.test.ts  store.ts
web/e2_viewer/src/grep/: gitem.test.ts  gitem.ts  grepModel.test.ts  grepModel.ts
